Made changes to content of site and font size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <html>
         <div class="wrapper">
         <div class="one">
-            <div class="logo-wrapper">
+            <!-- <div class="logo-wrapper">
                 <div id="logo-1">
                     <img src="https://static.wikia.nocookie.net/worldofcarsdrivein/images/2/26/Pixar-Cars-Rusteze-logo-vector.png" alt="Lightning Mcqueen smiling">
                 </div>
@@ -30,15 +30,49 @@
                 <div id="logo-1">
                     <img src="https://static.wikia.nocookie.net/worldofcarsdrivein/images/2/2e/Dinoco_Logo.png" alt="Lightning Mcqueen smilingh">
                 </div>
+            </div> -->
+        </div>
+        <div class="two">
+            <h1>Lightning McQueen</h1>
+            <div class="profile-image">
+                <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Lightning_McQueen.png" alt="Lightning Mcqueen smiling">
             </div>
-        </div>
-        <div class="two">Two
+            <a href="https://www.memedroid.com/memes/tag/lightning+mcqueen" target="_blank">Lightining McQueen Memes</a>
 
         </div>
-        <div class="three">Three
+        <div class="three">
+            <div id="content-grid">
+                <div id="main-description"> 
+                    <h1>Ka-chow!</h1>
+                    <br>
+                    <p>"I’m Lightning McQueen, and let me tell you, it’s been one heck of a ride. When I first hit the racing scene, I thought winning was everything. I was fast, I was flashy, and I didn’t need anyone—just me and that Piston Cup. But boy, was I wrong. My life took a sharp turn when I ended up in Radiator Springs, a small town on Route 66 that nobody really talks about.<br><br> There, I met some of the best friends I could ever ask for—Mater, the funniest, most loyal tow truck you’ll ever meet, and Sally, who showed me there’s more to life than the finish line. They helped me see that racing isn’t just about trophies; it’s about the journey, the people you meet, and the lessons you learn along the way. Now, I’m not just racing for me—I’m helping others like Cruz Ramirez chase their dreams too. And yeah, I still love the speed, but now, it’s about so much more. <br><br>Life’s a highway, and I’m enjoying every mile."</p>
+                </div>
+
+                <div id="fun-facts"> 
+                    <h2>Fun Facts!</h2>
+                    <br>
+                    <ol>
+                        <li> Lightning McQueen's real name is Montgomery McQueen, and he was named after Glenn McQueen, a supervising animator at Pixar Studios.
+                        </li>
+                        <br>
+                        <li>
+                            Lightning McQueen is a mix between a stock car and a Le Mans endurance racer.
+                        </li>
+                        <br>
+                        <li>
+                            In the original Cars movie, Lightning McQueen is in his early-to-mid twenties. 
+
+                        </li>
+                        <br>
+                        <li>
+                            Lightning McQueen was the Piston Cup Rookie of the Year in 2005 and was inducted into the Piston Cup Hall of Fame in 2019.
+                        </li>
+                    </ol>  
+                </div>
+            </div>
 
         </div>
-        <div class="four">Four
+        <div class="four">
 
         </div>
         
