--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
             </div> -->
         </div>
         <div class="two">
+            <br>
             <h1>Lightning McQueen</h1>
+            <br>
             <div class="profile-image">
                 <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Lightning_McQueen.png" alt="Lightning Mcqueen smiling">
             </div>
+            <br><br>
             <a href="https://www.memedroid.com/memes/tag/lightning+mcqueen" target="_blank">Lightining McQueen Memes</a>
+            <br><br>
+            <a href="/page1.html">Car Animation</a>
 
         </div>
         <div class="three">
