--- a/page1.html
+++ b/page1.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles-car.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>This is a page to test my internal links</h1>
-    <a href="/website.html">Go Back!</a>
+
+    <div class="screen">
+        <div class="content">
+            <h1>This is a page to test my internal links</h1>
+            <a class="button" href="/index.html" >Go Back!</a>
+        </div>
+        <div id="gif-container">
+            <div id="car-container">
+                <img id="Lightning-McQueen-gif"src="https://i.pinimg.com/originals/a0/8a/a8/a08aa8b9582aeb613aab028c4a2f5e7b.png">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
