added unorganised list

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
             <a href="https://www.memedroid.com/memes/tag/lightning+mcqueen" target="_blank">Lightining McQueen Memes</a>
             <br><br>
             <a href="/page1.html">Car Animation</a>
+            <ul>
+                <li>Racecar Name: Lightining McQueen</li>
+                <br>
+                <li>Real Name: Montgomery McQueen</li>
+                <br>
+                <li>Car Number: 95</li>
+                <br>
+                <li>Top Speed: 100mph</li>
+                <br>
+            </ul>
 
         </div>
         <div class="three">
